clusters/KC-Int/deployments/media/deluge/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deluge
spec:
  replicas: 0
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: deluge
  template:
    metadata:
      labels:
        app: deluge
    spec:
      nodeName: kc-w-04
      containers:
        - name: deluge-vpn
          image: >-
            ghcr.io/qdm12/gluetun@sha256:f501359827a9c8523d78add8ce68791a31634c146c8eef0fd8700a68b8160cfd
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
          resources:
            limits:
              memory: 2Gi
              cpu: '1'
          volumeMounts:
            - name: config
              mountPath: /gluetun
              subPath: gluetun
        - name: deluge
          image: 'lscr.io/linuxserver/deluge:2.1.1-r9-ls266'
          resources:
            limits:
              memory: 16Gi
              cpu: '8'
            requests:
              memory: 2Gi
              cpu: '2'
          ports:
            - containerPort: 8112
              name: webui
              protocol: TCP
            - containerPort: 58846
              name: rpc
              protocol: TCP
            - containerPort: 6881
              name: tcp
              protocol: TCP
            - containerPort: 6881
              name: udp
              protocol: UDP
          readinessProbe:
            failureThreshold: 4
            httpGet:
              path: /
              port: 8112
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 12
            successThreshold: 2
            timeoutSeconds: 5
          startupProbe:
            failureThreshold: 60
            httpGet:
              path: /
              port: 8112
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 3
          volumeMounts:
            - name: config
              mountPath: /config
              subPath: config
            - name: downloads
              mountPath: /Downloads
            - name: media
              mountPath: /BigPoolMedia
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: deluge
        - name: media
          nfs:
            server: 172.16.1.10
            path: /mnt/BigPool/Media
        - name: downloads
          nfs:
            server: 172.16.1.10
            path: /mnt/FastPool/Downloads
