clusters/KC-Int/deployments/media/deluge/app/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: deluge
spec:
    selector:
        app: deluge
    ports:
        - port: 8112
