clusters/KC-Int/deployments/media/deluge/app/ingress.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: deluge
    annotations:
        kubernetes.io/ingress.class: traefik
spec:
    entryPoints:
        - websecure
    routes:
        - match: ENC[AES256_GCM,data:M/RKTDZrDWOE7Fvp4kcLWiWPUpVse5lDRl4=,iv:fR/jvR0wGbmmbGNv7ly0b8VEQiiMgKajMJVXDIVHeaA=,tag:7xz3j81BS5RkmHIlyP/uwQ==,type:str]
          kind: Rule
          services:
            - name: deluge
              port: 8112
    tls:
        secretName: production-tls
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB0TitlTzF5Wm9zSCtZQk5E
[...]
            mFnJohXDLJhofyPvzecxIOxSUzElLGFT0q0SYzWszFl7oVe5060wIw==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-23T15:16:06Z"
    mac: ENC[AES256_GCM,data:hw2WGMRF9OQVvcY3LSYQYOpQlmIBk4k/0w8v045uced3JhYHDl812SC0g3lwZGfsa9lOCdEsZRvrHIQa7FVrayI2UTuZB5QvuQ2GTGh0V2lc6JQwXkOqIFAjtp2ikcXbCvyXcsedhwifi2r5qrF8k9AS/Tj0u6FgNE9bABN2yY8=,iv:xA+thaF40NuCdwRie/DTVoQZ7UyKCVMj5WCWDJ3pUQE=,tag:FEkFKZ8H397Y8JZahtWc3w==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|data|match|externalName)$
    version: 3.8.1
